# Real-time-Pose-Estimation-and-Dense-Reconstruction-Based-on-DSO-and-MVSNet

./: .gitignore  README.md
UniMVSNet/scripts/: dtu_test.sh  pfmViewer.py  unimvsnet_node.py
dense_mapping/: CMakeLists.txt  package.xml
dense_mapping/include/dense_mapping/: pointcloudmapping.h
dense_mapping/launch/: dense_mapping_dataset.launch
dense_mapping/src/: dense_mapping.cpp  pointcloudmapping.cpp  pointcloudmapping.h
dso/: CMakeLists.txt
dso/src/: main_dso_pangolin.cpp
dso/src/FullSystem/: FullSystem.cpp  FullSystem.h  HessianBlocks.h
dso/src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
dso_ros/: CMakeLists.txt  package.xml
dso_ros/msg/: SE3Msg.msg  SlidingWindowsMsg.msg
dso_ros/src/: main_bw.cpp  main_wei.cpp  main_xu.cpp
dso_ros/src/backup/: dso_live.cpp  main.cpp
unimvsnet/: CMakeLists.txt  main.py  model.py  package.xml
unimvsnet/filter/: gipuma.py
unimvsnet/msg/: DepthMsg.msg
unimvsnet/scripts/: dtu_test.sh  unimvsnet_node.py
