<?xml version="1.0"?>
<package>
  <name>dense_mapping</name>
  <version>1.0.0</version>
  <description>

    ROS Wrapper DSO.

  </description>

  <author>Shuoyuan Xu</author>
  <license>see https://github.com/shuoyuanxu/Real-time-Pose-Estimation-and-Dense-Reconstruction-Based-on-DSO-and-MVSNet/tree/main</license>
  <maintainer email="shuoyxu@gmail.com">
  Shuoyuan Xu
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>unimvsnet</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>unimvsnet</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
